force-app/main/default/objects/CallCenterA_Opportunity__c/CallCenterA_Opportunity__c.object-meta.xml
<CustomObject>
    <label>コールA商談</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>コールA商談No.</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>