force-app/main/default/objects/CallCenterA_Opportunity__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>取引先</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>コールA商談</relationshipLabel>
    <relationshipName>AccountCallA_Opportunity</relationshipName>
    <type>Lookup</type>
</CustomField>