force-app/main/default/objects/CallCenterA_Opportunity__c/fields/AfterDocuments__c.field-meta.xml
<CustomField>
    <fullName>AfterDocuments__c</fullName>
    <label>後処理詳細</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>後処理</fullName>
            </value>
            <value>
                <fullName>自賠責</fullName>
            </value>
            <value>
                <fullName>売買契約書控え</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>