force-app/main/default/objects/CallCenterA_Opportunity__c/fields/Authorizer_CallA_DocMgmt__c.field-meta.xml
<CustomField>
    <fullName>Authorizer_CallA_DocMgmt__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>承認者</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Authorizer_CallA_DocMgmt</relationshipName>
    <type>Lookup</type>
</CustomField>