force-app/main/default/objects/CallCenterA_Opportunity__c/fields/Automobile_Inspection_App_CallA__c.field-meta.xml
<CustomField>
    <fullName>Automobile_Inspection_App_CallA__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>現在登録証発行申請依頼</label>
    <referenceTo>Document_management__c</referenceTo>
    <relationshipLabel>コールA商談　現在登録証発行申請依頼</relationshipLabel>
    <relationshipName>Automobile_Inspection_App_CallA</relationshipName>
    <type>Lookup</type>
</CustomField>