force-app/main/default/objects/CallCenterA_Opportunity__c/fields/BringinginYard_CallA__c.field-meta.xml
<CustomField>
    <fullName>BringinginYard_CallA__c</fullName>
    <label>搬入予定ヤード</label>
    <length>50</length>
    <type>Text</type>
</CustomField>