force-app/main/default/objects/CallCenterA_Opportunity__c/fields/CallA_Comments__c.field-meta.xml
<CustomField>
    <fullName>CallA_Comments__c</fullName>
    <label>コメント</label>
    <type>TextArea</type>
</CustomField>