force-app/main/default/objects/CallCenterA_Opportunity__c/fields/CallA_DocManagement__c.field-meta.xml
<CustomField>
    <fullName>CallA_DocManagement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>書類管理依頼</label>
    <referenceTo>Document_management__c</referenceTo>
    <relationshipLabel>コールA商談</relationshipLabel>
    <relationshipName>CallA_DocManagement</relationshipName>
    <type>Lookup</type>
</CustomField>