force-app/main/default/objects/CallCenterA_Opportunity__c/fields/CarClass__c.field-meta.xml
<CustomField>
    <fullName>CarClass__c</fullName>
    <label>車両区分</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>事故車</fullName>
            </value>
            <value>
                <fullName>故障車</fullName>
            </value>
            <value>
                <fullName>冠水車</fullName>
            </value>
            <value>
                <fullName>中古車</fullName>
            </value>
            <value>
                <fullName>その他</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>