force-app/main/default/objects/CallCenterA_Opportunity__c/fields/CarName__c.field-meta.xml
<CustomField>
    <fullName>CarName__c</fullName>
    <label>車種</label>
    <length>50</length>
    <type>Text</type>
</CustomField>