force-app/main/default/objects/CallCenterA_Opportunity__c/fields/Cartax_hs__c.field-meta.xml
<CustomField>
    <fullName>Cartax_hs__c</fullName>
    <formula>Case__r.Cartax_hs__c</formula>
    <label>自動車税</label>
    <type>Text</type>
</CustomField>