force-app/main/default/objects/CallCenterA_Opportunity__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>買取受付</label>
    <referenceTo>Case__c</referenceTo>
    <relationshipLabel>コールA商談</relationshipLabel>
    <relationshipName>Case_CallAOpportunity</relationshipName>
    <type>Lookup</type>
</CustomField>