force-app/main/default/objects/CallCenterA_Opportunity__c/fields/Comment_Logistics_CallA__c.field-meta.xml
<CustomField>
    <fullName>Comment_Logistics_CallA__c</fullName>
    <label>物流コメント</label>
    <type>TextArea</type>
</CustomField>