force-app/main/default/objects/CallCenterA_Opportunity__c/fields/ContractCompletedDate__c.field-meta.xml
<CustomField>
    <fullName>ContractCompletedDate__c</fullName>
    <formula>Case__r.ContractCompletedDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>売契完了日</label>
    <type>Date</type>
</CustomField>