force-app/main/default/objects/CallCenterA_Opportunity__c/fields/Departure_CallA__c.field-meta.xml
<CustomField>
    <fullName>Departure_CallA__c</fullName>
    <label>出発地</label>
    <length>50</length>
    <type>Text</type>
</CustomField>