force-app/main/default/objects/CallCenterA_Opportunity__c/fields/Description_toDocManagement__c.field-meta.xml
<CustomField>
    <fullName>Description_toDocManagement__c</fullName>
    <label>説明</label>
    <type>TextArea</type>
</CustomField>