force-app/main/default/objects/CallCenterA_Opportunity__c/fields/Destination_CallA__c.field-meta.xml
<CustomField>
    <fullName>Destination_CallA__c</fullName>
    <label>目的地</label>
    <length>50</length>
    <type>Text</type>
</CustomField>