force-app/main/default/objects/CallCenterA_Opportunity__c/fields/DocumentAttachmentShipping_Free__c.field-meta.xml
<CustomField>
    <fullName>DocumentAttachmentShipping_Free__c</fullName>
    <label>書類取付備考</label>
    <type>TextArea</type>
</CustomField>