force-app/main/default/objects/CallCenterA_Opportunity__c/fields/DocumentAttachmentShippingDate__c.field-meta.xml
<CustomField>
    <fullName>DocumentAttachmentShippingDate__c</fullName>
    <label>書類取付発送日</label>
    <type>Date</type>
</CustomField>