force-app/main/default/objects/CallCenterA_Opportunity__c/fields/ForwardingCompany_CallA__c.field-meta.xml
<CustomField>
    <fullName>ForwardingCompany_CallA__c</fullName>
    <label>回送業者</label>
    <type>TextArea</type>
</CustomField>