force-app/main/default/objects/CallCenterA_Opportunity__c/fields/ForwardingFee_CallA__c.field-meta.xml
<CustomField>
    <fullName>ForwardingFee_CallA__c</fullName>
    <label>回送料金</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>