force-app/main/default/objects/CallCenterA_Opportunity__c/fields/ForwardingRequest_CallA__c.field-meta.xml
<CustomField>
    <fullName>ForwardingRequest_CallA__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>回送依頼</label>
    <referenceTo>ForwardingRequest__c</referenceTo>
    <relationshipLabel>コールA商談</relationshipLabel>
    <relationshipName>ForwardingRequest_CallA</relationshipName>
    <type>Lookup</type>
</CustomField>