force-app/main/default/objects/CallCenterA_Opportunity__c/fields/ForwardingRequest_Cancel__c.field-meta.xml
<CustomField>
    <fullName>ForwardingRequest_Cancel__c</fullName>
    <defaultValue>false</defaultValue>
    <label>回送依頼キャンセル</label>
    <type>Checkbox</type>
</CustomField>