force-app/main/default/objects/CallCenterA_Opportunity__c/fields/ForwardingRequestDate_CallA__c.field-meta.xml
<CustomField>
    <fullName>ForwardingRequestDate_CallA__c</fullName>
    <label>回送依頼日</label>
    <type>Date</type>
</CustomField>