force-app/main/default/objects/CallCenterA_Opportunity__c/fields/ForwardingScheduledDate_Call__c.field-meta.xml
<CustomField>
    <fullName>ForwardingScheduledDate_Call__c</fullName>
    <label>回送予定日</label>
    <type>Date</type>
</CustomField>