force-app/main/default/objects/CallCenterA_Opportunity__c/fields/Grades__c.field-meta.xml
<CustomField>
    <fullName>Grades__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>グレード</label>
    <referenceTo>Mst_Grades__c</referenceTo>
    <relationshipLabel>コールA商談</relationshipLabel>
    <relationshipName>GradeUnderCallAOpportunity</relationshipName>
    <type>Lookup</type>
</CustomField>