force-app/main/default/objects/CallCenterA_Opportunity__c/fields/Liability_hs__c.field-meta.xml
<CustomField>
    <fullName>Liability_hs__c</fullName>
    <formula>Case__r.Liability_hs__c</formula>
    <label>自賠責</label>
    <type>Text</type>
</CustomField>