force-app/main/default/objects/CallCenterA_Opportunity__c/fields/LiabilityAttachmentShipping__c.field-meta.xml
<CustomField>
    <fullName>LiabilityAttachmentShipping__c</fullName>
    <label>自賠取付</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>取付要</fullName>
            </value>
            <value>
                <fullName>取付不要</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>