force-app/main/default/objects/CallCenterA_Opportunity__c/fields/LocationAddress_hs__c.field-meta.xml
<CustomField>
    <fullName>LocationAddress_hs__c</fullName>
    <formula>IF ( SameAsAccountAddress_hs__c = true , Account__r.PersonContact.MailingState &amp; Account__r.PersonContact.MailingCity &amp; Account__r.PersonContact.MailingStreet , Account__r.PersonContact.OtherState &amp; Account__r.PersonContact.OtherCity &amp; Account__r.PersonContact.OtherStreet)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>保管場所住所</label>
    <type>Text</type>
</CustomField>