force-app/main/default/objects/CallCenterA_Opportunity__c/fields/LocationAddress_memo__c.field-meta.xml
<CustomField>
    <fullName>LocationAddress_memo__c</fullName>
    <label>保管場所メモ</label>
    <length>50</length>
    <type>Text</type>
</CustomField>