force-app/main/default/objects/CallCenterA_Opportunity__c/fields/LotNo__c.field-meta.xml
<CustomField>
    <fullName>LotNo__c</fullName>
    <label>ロット番号</label>
    <length>7</length>
    <type>Text</type>
</CustomField>