force-app/main/default/objects/CallCenterA_Opportunity__c/fields/OtherAA_Place__c.field-meta.xml
<CustomField>
    <fullName>OtherAA_Place__c</fullName>
    <description>山本</description>
    <formula>TEXT(Case__r.OtherAA_Place__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>出品会場</label>
    <type>Text</type>
</CustomField>