force-app/main/default/objects/CallCenterA_Opportunity__c/fields/OtherInquiries_DocMgmt_CallA__c.field-meta.xml
<CustomField>
    <fullName>OtherInquiries_DocMgmt_CallA__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>その他問い合わせ</label>
    <referenceTo>Document_management__c</referenceTo>
    <relationshipLabel>コールA商談 　その他問い合わせ</relationshipLabel>
    <relationshipName>OtherInquiries_DocMgmt_CallA</relationshipName>
    <type>Lookup</type>
</CustomField>