force-app/main/default/objects/CallCenterA_Opportunity__c/fields/Owner_Fullname__c.field-meta.xml
<CustomField>
    <fullName>Owner_Fullname__c</fullName>
    <formula>Owner:User.LastName &amp; &quot; &quot; &amp; Owner:User.FirstName</formula>
    <label>所有者</label>
    <type>Text</type>
</CustomField>