force-app/main/default/objects/CallCenterA_Opportunity__c/fields/Phase__c.field-meta.xml
<CustomField>
    <fullName>Phase__c</fullName>
    <label>フェーズ</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ア待ち</fullName>
            </value>
            <value>
                <fullName>ア済み</fullName>
            </value>
            <value>
                <fullName>売契待ち</fullName>
            </value>
            <value>
                <fullName>確定待ち</fullName>
            </value>
            <value>
                <fullName>日程調整中</fullName>
            </value>
            <value>
                <fullName>書類待ち</fullName>
            </value>
            <value>
                <fullName>振込待ち</fullName>
            </value>
            <value>
                <fullName>出品待ち</fullName>
            </value>
            <value>
                <fullName>出品中</fullName>
            </value>
            <value>
                <fullName>後処理待ち</fullName>
            </value>
            <value>
                <fullName>全完了</fullName>
            </value>
            <value>
                <fullName>キャンセル</fullName>
            </value>
            <value>
                <fullName>受付</fullName>
                <isActive>false</isActive>
                <label>受付</label>
            </value>
            <value>
                <fullName>買取</fullName>
                <isActive>false</isActive>
                <label>買取</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>