force-app/main/default/objects/CallCenterA_Opportunity__c/fields/Pickup_Preferred_date1_CallA__c.field-meta.xml
<CustomField>
    <fullName>Pickup_Preferred_date1_CallA__c</fullName>
    <label>引取希望日1</label>
    <type>Date</type>
</CustomField>