force-app/main/default/objects/CallCenterA_Opportunity__c/fields/Pickup_Preferred_date2_CallA__c.field-meta.xml
<CustomField>
    <fullName>Pickup_Preferred_date2_CallA__c</fullName>
    <label>引取希望日2</label>
    <type>Date</type>
</CustomField>