force-app/main/default/objects/CallCenterA_Opportunity__c/fields/Pickup_Preferred_date__c.field-meta.xml
<CustomField>
    <fullName>Pickup_Preferred_date__c</fullName>
    <label>引取希望日</label>
    <length>255</length>
    <type>Text</type>
</CustomField>