force-app/main/default/objects/CallCenterA_Opportunity__c/fields/PickUpDate__c.field-meta.xml
<CustomField>
    <fullName>PickUpDate__c</fullName>
    <label>引取日</label>
    <type>Date</type>
</CustomField>