force-app/main/default/objects/CallCenterA_Opportunity__c/fields/PickupRequest_toLogistics_CallA__c.field-meta.xml
<CustomField>
    <fullName>PickupRequest_toLogistics_CallA__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>引取依頼</label>
    <referenceTo>PickupRequest__c</referenceTo>
    <relationshipLabel>コールA商談</relationshipLabel>
    <relationshipName>PickupRequest_toLogistics_CallA</relationshipName>
    <type>Lookup</type>
</CustomField>