force-app/main/default/objects/CallCenterA_Opportunity__c/fields/Precautions__c.field-meta.xml
<CustomField>
    <fullName>Precautions__c</fullName>
    <formula>Case__r.Precautions__c</formula>
    <label>注意事項</label>
    <type>Text</type>
</CustomField>