force-app/main/default/objects/CallCenterA_Opportunity__c/fields/ProcessingMonth__c.field-meta.xml
<CustomField>
    <fullName>ProcessingMonth__c</fullName>
    <formula>TEXT(Case__r.ProcessingMonth__c)</formula>
    <label>処理想定月</label>
    <type>Text</type>
</CustomField>