force-app/main/default/objects/CallCenterA_Opportunity__c/fields/REQ_MonthlyProcedure_CallA__c.field-meta.xml
<CustomField>
    <fullName>REQ_MonthlyProcedure_CallA__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>月内手続き申請依頼</label>
    <referenceTo>Document_management__c</referenceTo>
    <relationshipLabel>コールA商談 　月内手続き申請依頼</relationshipLabel>
    <relationshipName>REQ_MonthlyProcedure_CallA</relationshipName>
    <type>Lookup</type>
</CustomField>