force-app/main/default/objects/CallCenterA_Opportunity__c/fields/REQ_MonthlyProcedure_cpl_CallA__c.field-meta.xml
<CustomField>
    <fullName>REQ_MonthlyProcedure_cpl_CallA__c</fullName>
    <label>月内手続き完了日</label>
    <type>Date</type>
</CustomField>