force-app/main/default/objects/CallCenterA_Opportunity__c/fields/Request_Detail__c.field-meta.xml
<CustomField>
    <fullName>Request_Detail__c</fullName>
    <label>依頼内容</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>現在登録証発行申請</fullName>
            </value>
            <value>
                <fullName>月内手続き申請</fullName>
            </value>
            <value>
                <fullName>その他問い合わせ</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>