force-app/main/default/objects/CallCenterA_Opportunity__c/fields/SameAsAccountAddress_hs__c.field-meta.xml
<CustomField>
    <fullName>SameAsAccountAddress_hs__c</fullName>
    <defaultValue>false</defaultValue>
    <label>取引先と同じ</label>
    <type>Checkbox</type>
</CustomField>