force-app/main/default/objects/CallCenterA_Opportunity__c/fields/ScheduledPickupDate_CallA__c.field-meta.xml
<CustomField>
    <fullName>ScheduledPickupDate_CallA__c</fullName>
    <label>引取予定日</label>
    <type>Date</type>
</CustomField>