force-app/main/default/objects/CallCenterA_Opportunity__c/fields/StorageLocation__c.field-meta.xml
<CustomField>
    <fullName>StorageLocation__c</fullName>
    <label>保管場所名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>