force-app/main/default/objects/CallCenterA_Opportunity__c/fields/TransportCompany_CallA__c.field-meta.xml
<CustomField>
    <fullName>TransportCompany_CallA__c</fullName>
    <label>引取業者</label>
    <type>TextArea</type>
</CustomField>