force-app/main/default/objects/CallCenterA_Opportunity__c/fields/TransportFee__c.field-meta.xml
<CustomField>
    <fullName>TransportFee__c</fullName>
    <label>陸送料金</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>