force-app/main/default/objects/CallCenterA_Opportunity__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <label>車検証使用者</label>
    <length>255</length>
    <type>Text</type>
</CustomField>