force-app/main/default/objects/CallCenterA_Opportunity__c/fields/VehicleClassification__c.field-meta.xml
<CustomField>
    <fullName>VehicleClassification__c</fullName>
    <formula>TEXT(Case__r.VehicleClassification__c)</formula>
    <label>ABC区分</label>
    <type>Text</type>
</CustomField>