force-app/main/default/objects/CallCenterA_Opportunity__c/fields/VehicleCondition_CallA__c.field-meta.xml
<CustomField>
    <fullName>VehicleCondition_CallA__c</fullName>
    <label>自走可否</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>自走可</fullName>
            </value>
            <value>
                <fullName>自走少し可（積込可）</fullName>
            </value>
            <value>
                <fullName>自走少し可（積込不可）</fullName>
            </value>
            <value>
                <fullName>自走不可（転がる）</fullName>
            </value>
            <value>
                <fullName>自走不可（転がらない）</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>