force-app/main/default/objects/CallCenterA_Opportunity__c/fields/VehicleCondition_Supplement_hs__c.field-meta.xml
<CustomField>
    <fullName>VehicleCondition_Supplement_hs__c</fullName>
    <label>車両状態</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>自走積込OK</fullName>
            </value>
            <value>
                <fullName>積載車　ウィンチけん引積込OK</fullName>
            </value>
            <value>
                <fullName>レッカー対応</fullName>
            </value>
            <value>
                <fullName>クレーン対応</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>