force-app/main/default/objects/CallCenterA_Opportunity__c/fields/WeightTax_hs__c.field-meta.xml
<CustomField>
    <fullName>WeightTax_hs__c</fullName>
    <formula>Case__r.WeightTax_hs__c</formula>
    <label>重量税</label>
    <type>Text</type>
</CustomField>