force-app/main/default/objects/CallCenterA_Opportunity__c/validationRules/ChangePhaseToCancellation.validationRule-meta.xml
<ValidationRule>
    <fullName>ChangePhaseToCancellation</fullName>
    <active>false</active>
    <errorConditionFormula>OR( ISPICKVAL( PRIORVALUE( Phase__c ) , &quot;ア待ち&quot; ) , ISPICKVAL( PRIORVALUE( Phase__c ) , &quot;ア済み&quot; ) , ISPICKVAL( PRIORVALUE( Phase__c ) , &quot;売契待ち&quot; ) , ISPICKVAL( PRIORVALUE( Phase__c ) , &quot;確定待ち&quot; )) 
 &amp;&amp; ISPICKVAL( Phase__c , &quot;キャンセル&quot; )</errorConditionFormula>
    <errorMessage>流通からキャンセル処理を行ってください</errorMessage>
</ValidationRule>