force-app/main/default/objects/CallCenterA_Opportunity__c/validationRules/Remarks_column_isblank.validationRule-meta.xml
<ValidationRule>
    <fullName>Remarks_column_isblank</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL( Request_Detail__c , &quot;現在登録証発行申請&quot;) &amp;&amp;
ISBLANK(  RegistrationNo__c  )</errorConditionFormula>
    <errorDisplayField>Request_Detail__c</errorDisplayField>
    <errorMessage>登録番号が入力されていません。</errorMessage>
</ValidationRule>