force-app/main/default/objects/CallCenterA_Opportunity__c/listViews/A1.listView-meta.xml
<ListView>
    <fullName>A1</fullName>
    <columns>NAME</columns>
    <columns>Case__c</columns>
    <columns>VehicleClassification__c</columns>
    <columns>LotNo__c</columns>
    <columns>Account__c</columns>
    <columns>Phase__c</columns>
    <columns>FirstRegistration_Year_hs__c</columns>
    <columns>CarName__c</columns>
    <columns>DocumentCompleteCheck__c</columns>
    <columns>TransferDate__c</columns>
    <columns>AfterDocumentsShipmentDay__c</columns>
    <columns>AfterDocuments_CompleteCheck__c</columns>
    <columns>LiabilityAttachmentShipping__c</columns>
    <columns>ListingEndsDate__c</columns>
    <columns>Precautions__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Phase__c</field>
        <operation>notEqual</operation>
        <value>全完了,キャンセル</value>
    </filters>
    <filters>
        <field>TransferDate__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>AfterDocumentsShipmentDay__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>AfterDocuments_CompleteCheck__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>VehicleClassification__c</field>
        <operation>notEqual</operation>
        <value>コールA/リユース</value>
    </filters>
    <filters>
        <field>PurchaseDate__c</field>
        <operation>lessOrEqual</operation>
        <value>12/8/2023</value>
    </filters>
    <label>すべての後処理待ちのコールA商談（～12/8契約）</label>
    <sharedTo>
        <role>CallCenter</role>
    </sharedTo>
</ListView>