force-app/main/default/objects/CallCenterA_Opportunity__c/listViews/A3.listView-meta.xml
<ListView>
    <fullName>A3</fullName>
    <booleanFilter>1 AND 2 AND 3 AND 4 AND 5</booleanFilter>
    <columns>Case__c</columns>
    <columns>LotNo__c</columns>
    <columns>NAME</columns>
    <columns>Owner_Fullname__c</columns>
    <columns>Account__c</columns>
    <columns>CarName__c</columns>
    <columns>VehicleClassification__c</columns>
    <columns>PickUpDate__c</columns>
    <columns>Amount__c</columns>
    <columns>DocumentCompleteCheck__c</columns>
    <columns>TransferDate__c</columns>
    <columns>ListingEndsDate__c</columns>
    <columns>Precautions__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>DocumentCompleteCheck__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>ListingEndsDate__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>VehicleClassification__c</field>
        <operation>notEqual</operation>
        <value>コールA/リユース,コールA/リユース（SMS不可）</value>
    </filters>
    <filters>
        <field>Phase__c</field>
        <operation>notContain</operation>
        <value>キャンセル</value>
    </filters>
    <filters>
        <field>OtherAA_Place__c</field>
        <operation>equals</operation>
    </filters>
    <label>ソコカラA　出品漏れチェック</label>
</ListView>